src/styles/blocks/header.scss
.header {
  background-image: url(../images/header_bg.png);
  background-position: 86% center;
  background-size: cover;

  @include onTablet {
    background-image: url(../images/header_bg_tablet.png);
    background-position: 100%;
  }

  @include onDesktop {
    background-image: url(../images/header_bg.png);
    background-position: center;
  }

  &__content {
    display: flex;
    height: 100vh;
    flex-direction: column;
    justify-content: space-between;
  }

  &__title {
    font-size: 36px;
    font-weight: 700;
    line-height: 100%;
    text-align: center;
    letter-spacing: -1.5px;

    @include onTablet {
      font-size: 64px;
    }

    @include onDesktop {
      font-size: 80px;
    }
  }

  &__bottom {
    padding-bottom: 88px;

    @include onTablet {
      padding-bottom: 130px;
    }

    @include onDesktop {
      padding-bottom: 203px;
    }
  }
}

